- Added the "Workflow: cancelled" notification event for sending form notifications when the workflow is cancelled.
- Fixed an issue which prevents tokens from working correctly with role assignees.
- Fixed an issue which causes discussion field show / hide toggle to display on non-Gravity Flow pages.
- Fixed an issue which prevents form connector mapping assignee field and export display of user-based field types (assignee, user, multiuser)
- Fixed the step ID in the notification ID.
- Fixed an issue where reminders are sent out when forms or steps are inactive.
- Fixed some issues with RTL styles
- Fixed some issues with styles on the Twenty Seventeen theme.
- Fixed an issue with the status shortcode where the workflow_info and step_status attributes are ignored.