@@ -1,4 +1,5 @@
 - Added the "Workflow: cancelled" notification event for sending form notifications when the workflow is cancelled.
+- Added the merge_tag {current_step} with [modifiers] for duration (time), expiration (date/time), ID, name (default), schedule (date/time), start (date/time) and type.
 - Fixed an issue which prevents tokens from working correctly with role assignees.
 - Fixed an issue which causes discussion field show / hide toggle to display on non-Gravity Flow pages.
 - Fixed an issue which prevents form connector mapping assignee field and export display of user-based field types (assignee, user, multiuser)
